# langchain-course-udemy

./: main.py  pyproject.toml
function-calling-sec6/: exercise-prompt-to-tool-calls.py  main.py
react-langchain/: Pipfile  main.py
react-langchain-sec5/: callbacks.py  main.py
sec1-sec2-intro/: main.py
sec11-langgraph/: main.py  nodes.py  pyproject.toml  react.py
sec12-reflection-agent/: chains.py  main.py  pyproject.toml
sec13-reflexion-agent/: chains.py  main.py  pyproject.toml  schemas.py  tool_executor.py
sec14-agentic-RAG/: ingestion.py  main.py  pyproject.toml
sec14-agentic-RAG/.chroma/: chroma.sqlite3
sec14-agentic-RAG/graph/: __init__.py  state.py
sec14-agentic-RAG/graph/chains/: generation.py  retrieval_grader.py
sec14-agentic-RAG/graph/chains/tests/: test_chains.py
sec14-agentic-RAG/graph/nodes/: generate.py  grade_documents.py  retrieve.py  web_search.py
sec2-groq-model-switching-ex/: groq-ex.py
sec7-rag-2/: ingestion.py  main.py
sec8-documentation-assistant-2/: ingestion.py  main.py
sec8-documentation-assistant-2/backend/: core.py
section3-agents/: main.py  main2.py  pyproject.toml
section4-langchain-react-agent/: main.py  main2.py  pyproject.toml
