[project]
name = "sec11-langgraph"
version = "0.1.0"
description = ""
authors = [
    {name = "kristijanH1998",email = "kristijan.hornung1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "langchain (>=1.2.7,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-tavily (>=0.2.17,<0.3.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]
